Added cube test

--- a/Crafty/Crafty.csproj
+++ b/Crafty/Crafty.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainWindow.cs" />
+    <Compile Include="Models.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -80,6 +81,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\externals\Craft.Net\Craft.Net.Client\Craft.Net.Client.csproj">
+      <Project>{D48822DB-4A67-48DD-A858-A629F92233FB}</Project>
+      <Name>Craft.Net.Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\externals\Craft.Net\Craft.Net.Data\Craft.Net.Data.csproj">
+      <Project>{30C3F936-8D95-4113-BA48-8B798B056309}</Project>
+      <Name>Craft.Net.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\externals\Craft.Net\Craft.Net\Craft.Net.csproj">
+      <Project>{C3BBAB7E-606F-420E-9461-C8CFAEC2476B}</Project>
+      <Name>Craft.Net</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
